# rssslack

./: README.md  rssslack.cabal
app/: Main.hs
src/: Lib.hs
