name:                rssslack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rssslack#readme
license:             BSD3
license-file:        LICENSE
author:              Sergii Paryzhskyi
maintainer:          parizhskiy@gmail.com
copyright:           2017 Sergii Paryzhskyi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , regex-tdfa
                      , curl
                      , feed
                      , utf8-string
  default-language:    Haskell2010

executable rssslack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rssslack
  default-language:    Haskell2010

test-suite rssslack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rssslack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HeeL/rssslack
